APIs/googleapis.com/displayvideo/v2/javascript-client/docs/GenerateDefaultLineItemRequest.md
# DisplayVideo360Api.GenerateDefaultLineItemRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**displayName** | **String** | Required. The display name of the line item. Must be UTF-8 encoded with a maximum size of 240 bytes. | [optional] 
**insertionOrderId** | **String** | Required. The unique ID of the insertion order that the line item belongs to. | [optional] 
**lineItemType** | **String** | Required. The type of the line item. | [optional] 
**mobileApp** | [**MobileApp**](MobileApp.md) |  | [optional] 



## Enum: LineItemTypeEnum


* `UNSPECIFIED` (value: `"LINE_ITEM_TYPE_UNSPECIFIED"`)

* `DISPLAY_DEFAULT` (value: `"LINE_ITEM_TYPE_DISPLAY_DEFAULT"`)

* `DISPLAY_MOBILE_APP_INSTALL` (value: `"LINE_ITEM_TYPE_DISPLAY_MOBILE_APP_INSTALL"`)

* `VIDEO_DEFAULT` (value: `"LINE_ITEM_TYPE_VIDEO_DEFAULT"`)

* `VIDEO_MOBILE_APP_INSTALL` (value: `"LINE_ITEM_TYPE_VIDEO_MOBILE_APP_INSTALL"`)

* `DISPLAY_MOBILE_APP_INVENTORY` (value: `"LINE_ITEM_TYPE_DISPLAY_MOBILE_APP_INVENTORY"`)

* `VIDEO_MOBILE_APP_INVENTORY` (value: `"LINE_ITEM_TYPE_VIDEO_MOBILE_APP_INVENTORY"`)

* `AUDIO_DEFAULT` (value: `"LINE_ITEM_TYPE_AUDIO_DEFAULT"`)

* `VIDEO_OVER_THE_TOP` (value: `"LINE_ITEM_TYPE_VIDEO_OVER_THE_TOP"`)

* `YOUTUBE_AND_PARTNERS_ACTION` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_ACTION"`)

* `YOUTUBE_AND_PARTNERS_NON_SKIPPABLE` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_NON_SKIPPABLE"`)

* `YOUTUBE_AND_PARTNERS_VIDEO_SEQUENCE` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_VIDEO_SEQUENCE"`)

* `YOUTUBE_AND_PARTNERS_AUDIO` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_AUDIO"`)

* `YOUTUBE_AND_PARTNERS_REACH` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_REACH"`)

* `YOUTUBE_AND_PARTNERS_SIMPLE` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_SIMPLE"`)

* `YOUTUBE_AND_PARTNERS_NON_SKIPPABLE_OVER_THE_TOP` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_NON_SKIPPABLE_OVER_THE_TOP"`)

* `YOUTUBE_AND_PARTNERS_REACH_OVER_THE_TOP` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_REACH_OVER_THE_TOP"`)

* `YOUTUBE_AND_PARTNERS_SIMPLE_OVER_THE_TOP` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_SIMPLE_OVER_THE_TOP"`)

* `YOUTUBE_AND_PARTNERS_TARGET_FREQUENCY` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_TARGET_FREQUENCY"`)

* `YOUTUBE_AND_PARTNERS_VIEW` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_VIEW"`)

* `DISPLAY_OUT_OF_HOME` (value: `"LINE_ITEM_TYPE_DISPLAY_OUT_OF_HOME"`)

* `VIDEO_OUT_OF_HOME` (value: `"LINE_ITEM_TYPE_VIDEO_OUT_OF_HOME"`)




